--- a/source/pages/main/main.html
+++ b/source/pages/main/main.html
@@ -196,7 +196,8 @@
                             <button class="btn down">
                                 <div class="arrow btn__img">
                                     <svg viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                            <path d="M8,1 C8.4120206,1 8.67869581,1.16820615 9.01804372,1.50755406 L14.7437184,7.23322877 C15.0854272,7.57493753 15.0854272,8.12895688 14.7437184,8.47066564 C14.4020097,8.8123744 13.8479903,8.8123744 13.5062816,8.47066564 L8,2.96438407 L2.49371843,8.47066564 C2.15200968,8.8123744 1.59799032,8.8123744 1.25628157,8.47066564 C0.914572811,8.12895688 0.914572811,7.57493753 1.25628157,7.23322877 L7.00240491,1.48710543 C7.33493661,1.15457373 7.5879794,1 8,1 Z M8,7 C8.4120206,7 8.67869581,7.16820615 9.01804372,7.50755406 L14.7437184,13.2332288 C15.0854272,13.5749375 15.0854272,14.1289569 14.7437184,14.4706656 C14.4020097,14.8123744 13.8479903,14.8123744 13.5062816,14.4706656 L8,8.96438407 L2.49371843,14.4706656 C2.15200968,14.8123744 1.59799032,14.8123744 1.25628157,14.4706656 C0.914572811,14.1289569 0.914572811,13.5749375 1.25628157,13.2332288 L7.00240491,7.48710543 C7.33493661,7.15457373 7.5879794,7 8,7 Z" id="path-1"></path>
+                                        <path d="M8,1 C8.4120206,1 8.67869581,1.16820615 9.01804372,1.50755406 L14.7437184,7.23322877 C15.0854272,7.57493753 15.0854272,8.12895688 14.7437184,8.47066564 C14.4020097,8.8123744 13.8479903,8.8123744 13.5062816,8.47066564 L8,2.96438407 L2.49371843,8.47066564 C2.15200968,8.8123744 1.59799032,8.8123744 1.25628157,8.47066564 C0.914572811,8.12895688 0.914572811,7.57493753 1.25628157,7.23322877 L7.00240491,1.48710543 C7.33493661,1.15457373 7.5879794,1 8,1 Z M8,7 C8.4120206,7 8.67869581,7.16820615 9.01804372,7.50755406 L14.7437184,13.2332288 C15.0854272,13.5749375 15.0854272,14.1289569 14.7437184,14.4706656 C14.4020097,14.8123744 13.8479903,14.8123744 13.5062816,14.4706656 L8,8.96438407 L2.49371843,14.4706656 C2.15200968,14.8123744 1.59799032,14.8123744 1.25628157,14.4706656 C0.914572811,14.1289569 0.914572811,13.5749375 1.25628157,13.2332288 L7.00240491,7.48710543 C7.33493661,7.15457373 7.5879794,7 8,7 Z"
+                                            id="path-1"></path>
                                     </svg>
                                 </div>
                             </button>
@@ -210,7 +211,7 @@
                         <div class="gallery">
                             <ul class="gallery__nav">
                                 <li class="gallery__item">
-                                    <div class="card scenario_heigth100">
+                                    <div class="card card_heigth100">
                                         <div class="card__icon">
                                             <div class="card__img card__img_active">
                                                 <picture>
@@ -235,7 +236,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery__item">
-                                    <div class="card scenario_heigth100">
+                                    <div class="card card_heigth100">
                                         <div class="card__icon">
                                             <div class="card__img card__img_active">
                                                 <picture>
@@ -258,7 +259,7 @@
                         <div class="gallery-multi">
                             <ul class="gallery-multi__nav">
                                 <li class="gallery-multi__item">
-                                    <div class="card scenario_heigth100">
+                                    <div class="card card_heigth100">
                                         <div class="card__icon">
                                             <div class="card__img">
                                                 <picture>
@@ -283,7 +284,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery-multi__item">
-                                    <div class="card scenario_heigth100">
+                                    <div class="card card_heigth100">
                                         <div class="card__icon">
                                             <div class="card__img card__img_active">
                                                 <picture>
@@ -300,7 +301,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery-multi__item">
-                                    <div class="card scenario_heigth100">
+                                    <div class="card card_heigth100">
                                         <div class="card__icon">
                                             <div class="card__img">
                                                 <picture>
@@ -325,7 +326,7 @@
                                     </div>
                                 </li>
                                 <li class="gallery-multi__item">
-                                    <div class="card scenario_heigth100">
+                                    <div class="card card_heigth100">
                                         <div class="card__icon">
                                             <div class="card__img">
                                                 <picture>
@@ -345,13 +346,13 @@
                                             </div>
                                         </div>
                                         <h2 class="card__title">
-                                           Набрать горячую ванну
+                                            Набрать горячую ванну
                                         </h2>
                                         <span class="card__sheduling">Начнётся в 18:00</span>
                                     </div>
                                 </li>
                                 <li class="gallery-multi__item">
-                                    <div class="card scenario_heigth100">
+                                    <div class="card card_heigth100">
                                         <div class="card__icon">
                                             <div class="card__img ">
                                                 <picture>
@@ -380,15 +381,17 @@
                         <button class="btn gallery-multi__prev">
                             <div class="arrow gallery-multi__img gallery-multi__img_prev">
                                 <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                        <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z" id="path-1"></path>
+                                    <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
+                                        id="path-1"></path>
                                 </svg>
                             </div>
                         </button>
                         <button class="btn gallery-multi__next">
                             <div class="arrow gallery-multi__img gallery-multi__img_next">
                                 <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z" id="path-1"></path>
-                            </svg>
+                                    <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
+                                        id="path-1"></path>
+                                </svg>
                             </div>
                         </button>
                     </div>
@@ -402,14 +405,18 @@
                         <div class="menu-dropdown__title">
                             <span class="favorite-devices__link favorite-devices__link_paddingRight favorite-devices__link_active">Все</span>
                             <button class="arrow menu-dropdown__btn">
-                                        <svg class="arrow-icon-prev" viewBox="0 0 9 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                            <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z" id="path-1"></path>
-                                    </svg>
-                               
-                        </button>
+                                <svg class="arrow-icon-prev" viewBox="0 0 9 14" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
+                                        id="path-1"></path>
+                                </svg>
+
+                            </button>
                         </div>
 
                         <nav class="menu-dropdown__items">
+                            <li class="favorite-devices__item">
+                                <button class="favorite-devices__link">Все</button>
+                            </li>
                             <li class="favorite-devices__item">
                                 <button class="favorite-devices__link">Кухня</button>
                             </li>
@@ -606,14 +613,16 @@
                     <button class="btn gallery-horizontal__prev">
                         <div class="arrow gallery-multi__img gallery-multi__img_prev">
                             <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z" id="path-1"></path>
+                                <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
+                                    id="path-1"></path>
                             </svg>
                         </div>
                     </button>
                     <button class="btn gallery-horizontal__next">
                         <div class="arrow gallery-multi__img gallery-multi__img_next">
                             <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z" id="path-1"></path>
+                                <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
+                                    id="path-1"></path>
                             </svg>
                         </div>
                     </button>
