--- a/public/index.html
+++ b/public/index.html
@@ -571,8 +571,8 @@
                 </div>
 
             </div>
-            <div class="favorite-devices container_paddingLeft">
-                <div class="favorite-devices__title ">
+            <div class="favorite-devices ">
+                <div class="favorite-devices__title container_paddingLeft">
                     <h2 class="main__title">Избранные устройства</h2>
                     <div class="menu-dropdown">
                         <div class="menu-dropdown__title">
@@ -622,7 +622,7 @@
                         </li>
                     </nav>
                 </div>
-                <div id="favorite-devices" class="carousel favorite-devices__carousel">
+                <div id="favorite-devices" class="carousel favorite-devices__carousel container_paddingLeft">
                     <div class="gallery">
                         <ul class="gallery__nav">
                             <li class="gallery__item">
