--- a/source/pages/main/index.html
+++ b/source/pages/main/index.html
@@ -87,8 +87,39 @@
                     </div>
                 </div>
                 <div class="slider-wrapper slider-wrapper-vertical">
-                    <input class="slider slider-light slider-vertical" type="range" min="-10" max="+30" step="1" value="23" name="light" id="light">
-            
+                        <div class="slider-icon slider-icon__light">
+                                <div class="popap-bright popap-bright_min">
+                                        <svg class="svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                            <g id="sun" transform="translate(1.000000, 1.000000)" stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                                                <circle id="Oval" cx="11" cy="11" r="5"></circle>
+                                                <path d="M11,0 L11,2" id="Shape"></path>
+                                                <path d="M11,20 L11,22" id="Shape"></path>
+                                                <path d="M3.22,3.22 L4.64,4.64" id="Shape"></path>
+                                                <path d="M17.36,17.36 L18.78,18.78" id="Shape"></path>
+                                                <path d="M0,11 L2,11" id="Shape"></path>
+                                                <path d="M20,11 L22,11" id="Shape"></path>
+                                                <path d="M3.22,18.78 L4.64,17.36" id="Shape"></path>
+                                                <path d="M17.36,4.64 L18.78,3.22" id="Shape"></path>
+                                            </g>
+                                        </svg>
+                                    </div>
+                                    <div class="popap-bright popap-bright_max">
+                                            <svg class="svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                                <g id="sun" transform="translate(1.000000, 1.000000)" stroke="#ffffff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                                                    <circle id="Oval" cx="11" cy="11" r="5"></circle>
+                                                    <path d="M11,0 L11,2" id="Shape"></path>
+                                                    <path d="M11,20 L11,22" id="Shape"></path>
+                                                    <path d="M3.22,3.22 L4.64,4.64" id="Shape"></path>
+                                                    <path d="M17.36,17.36 L18.78,18.78" id="Shape"></path>
+                                                    <path d="M0,11 L2,11" id="Shape"></path>
+                                                    <path d="M20,11 L22,11" id="Shape"></path>
+                                                    <path d="M3.22,18.78 L4.64,17.36" id="Shape"></path>
+                                                    <path d="M17.36,4.64 L18.78,3.22" id="Shape"></path>
+                                                </g>
+                                            </svg>
+                                        </div>
+                        </div>
+                    <input class="slider slider-light" type="range" min="-10" max="+30" step="1" value="23" name="light" id="light">
                 </div>
             </div>
             <div class="popap-btns">
@@ -136,6 +167,7 @@
                             </div>
                         </div>
                     <div class="slider-wrapper">
+                                <div class="slider-icon slider-icon__temperature"></div>
                                 <input class="slider slider-temperature" type="range" min="-10" max="+30" step="1" value="23" name="temperature" id="temperature">
                     </div>
                        
