--- a/public/index.html
+++ b/public/index.html
@@ -240,9 +240,9 @@
                                                 <source srcset="./images/cloud-drizzle@2x.png 2x">
                                                 <source srcset="./images/cloud-drizzle.svg" type="image/svg+xml">
                                                 <img src="./images/cloud-drizzle.png" alt="дождь">
-                                        </div>
+                                           
                                         </picture>
-
+                                        </div>
                                     </div>
 
                                 </div>
@@ -548,22 +548,25 @@
                                 </li>
                             </ul>
                         </div>
-                        <button class="btn gallery-multi__prev">
-                            <div class="arrow gallery-multi__img gallery-multi__img_prev">
-                                <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
-                                        id="path-1"></path>
-                                </svg>
-                            </div>
-                        </button>
-                        <button class="btn gallery-multi__next">
-                            <div class="arrow gallery-multi__img gallery-multi__img_next">
-                                <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                                    <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
-                                        id="path-1"></path>
-                                </svg>
-                            </div>
-                        </button>
+                        <div class="btn-wrapper">
+                            <button class="gallery-multi__prev">
+                                <div class="arrow gallery-multi__img gallery-multi__img_prev">
+                                    <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
+                                            id="path-1"></path>
+                                    </svg>
+                                </div>
+                            </button>
+                            <button class="gallery-multi__next">
+                                <div class="arrow gallery-multi__img gallery-multi__img_next">
+                                    <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
+                                            id="path-1"></path>
+                                    </svg>
+                                </div>
+                            </button>
+                        </div>
+                       
                     </div>
                 </div>
 
@@ -780,7 +783,8 @@
                             </li>
                         </ul>
                     </div>
-                    <button class="btn gallery-horizontal__prev">
+                    <div class="btn-wrapper btn-wrapper__devices">
+                    <button class="gallery-horizontal__prev">
                         <div class="arrow gallery-multi__img gallery-multi__img_prev">
                             <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
@@ -788,7 +792,7 @@
                             </svg>
                         </div>
                     </button>
-                    <button class="btn gallery-horizontal__next">
+                    <button class="gallery-horizontal__next">
                         <div class="arrow gallery-multi__img gallery-multi__img_next">
                             <svg class="arrow-icon-prev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <path d="M7.5,11.7269472 C7.11373069,11.7269472 6.87650307,11.5723735 6.5647546,11.2398418 L1.17776397,5.49371843 C0.85741201,5.15200968 0.85741201,4.59799032 1.17776397,4.25628157 C1.49811593,3.91457281 2.01750907,3.91457281 2.33786103,4.25628157 L7.5,9.76256313 L12.662139,4.25628157 C12.9824909,3.91457281 13.5018841,3.91457281 13.822236,4.25628157 C14.142588,4.59799032 14.142588,5.15200968 13.822236,5.49371843 C13.822236,5.49371843 10.2436893,9.31083491 8.45441599,11.2193931 C8.13627732,11.5587411 7.88626931,11.7269472 7.5,11.7269472 Z"
@@ -796,6 +800,7 @@
                             </svg>
                         </div>
                     </button>
+                    </div>
                 </div>
 
             </div>
